pongo: SUN/137 change \myfig to \starfig

--- a/applications/pongo/sun137/sun137.tex
+++ b/applications/pongo/sun137/sun137.tex
@@ -793,7 +793,7 @@ PONGO> readf (SWP_DATA) selcond="Flux > 0.0" noall
 In this example PONGO draws a polyline across all missing data flagged by
 IUEDR.
 
-\myfig{sun137_fig1}{[htpb]}{width=0.9\textwidth}{fig:SPECTRUM}{SPECTRUM example.}{SPECTRUM example.}
+\starfig{sun137_fig1}{[htpb]}{width=0.9\textwidth}{fig:SPECTRUM}{SPECTRUM example.}{SPECTRUM example.}
 \newpage
 
 
@@ -806,7 +806,7 @@ performing simple statistics on the data (the \cnam{\iref{FITLINE}}
 and \cnam{\iref{FITCURVE}} commands).  Note that a summary of the
 statistics is reported for each fit to the data.
 
-\myfig{sun137_fig2}{[htbp]}{width=0.9\textwidth}{fig:ERRORS}{ERRORS example.}{ERRORS example.}
+\starfig{sun137_fig2}{[htbp]}{width=0.9\textwidth}{fig:ERRORS}{ERRORS example.}{ERRORS example.}
 \newpage
 
 
@@ -818,7 +818,7 @@ of histograms with PONGO (the \cnam{\iref{PLOTHIST}} command).  This
 procedure also illustrates how the drawing of the box around the plot
 can be controlled using the \cnam{\iref{BOXFRAME}} command.
 
-\myfig{sun137_fig3}{[htbp]}{width=0.9\textwidth}{fig:HISTOGRAM}{HISTOGRAM example.}{HISTOGRAM example.}
+\starfig{sun137_fig3}{[htbp]}{width=0.9\textwidth}{fig:HISTOGRAM}{HISTOGRAM example.}{HISTOGRAM example.}
 \newpage
 
 
@@ -831,7 +831,7 @@ point, and the use of the \verb+PONGO_NDATA+ global parameter for
 making a title containing the number of points that have been read in
 (in CL this uses the output parameter \verb+readf.ndata+)
 
-\myfig{sun137_fig4}{[htbp]}{width=0.9\textwidth}{fig:PPDOTDIAG}{PPDOTDIAG example.}{PPDOTDIAG example.}
+\starfig{sun137_fig4}{[htbp]}{width=0.9\textwidth}{fig:PPDOTDIAG}{PPDOTDIAG example.}{PPDOTDIAG example.}
 \newpage
 
 
@@ -841,7 +841,7 @@ The procedure \verb+ELLIPSES+ (\verb+ellipsetest+ from CL) was used to plot
 \emph{Figure \ref{fig:ELLIPSES}}, which illustrates the use of the
 \cnam{\iref{ELLIPSES}} command for plotting error ellipses.
 
-\myfig{sun137_fig5}{[htbp]}{width=\textwidth}{fig:ELLIPSES}{ELLIPSES example.}{ELLIPSES example.}
+\starfig{sun137_fig5}{[htbp]}{width=\textwidth}{fig:ELLIPSES}{ELLIPSES example.}{ELLIPSES example.}
 \newpage
 
 
@@ -852,7 +852,7 @@ available in PONGO.  It plots four different views of the distribution
 of a selection of the known pulsars in Right Ascension and Declination
 to produce \emph{Figure \ref{fig:PROJECTIONS}}.
 
-\myfig{sun137_fig6}{[htbp]}{width=0.9\textwidth}{fig:PROJECTIONS}{PROJECTIONS example.}{PROJECTIONS example.}
+\starfig{sun137_fig6}{[htbp]}{width=0.9\textwidth}{fig:PROJECTIONS}{PROJECTIONS example.}{PROJECTIONS example.}
 \newpage
 
 \subsubsection{Radec}
@@ -864,7 +864,7 @@ The output from it is shown in \emph{Figure \ref{fig:RADEC}}.
 The objects are some of the pulsars from
 \emph{Figures \ref{fig:PROJECTIONS}} and \emph{\ref{fig:PPDOTDIAG}}.
 
-\myfig{sun137_fig7}{[htbp]}{width=0.9\textwidth}{fig:RADEC}{RADEC example.}{RADEC example.}
+\starfig{sun137_fig7}{[htbp]}{width=0.9\textwidth}{fig:RADEC}{RADEC example.}{RADEC example.}
 \newpage
 
 \subsubsection{Vector}
@@ -874,7 +874,7 @@ bright stars. The stars are selected to have proper motions in
 RA greater than 0.5 arcseconds and the distances shown correspond to
 100000 years of travel.
 
-\myfig{sun137_fig9}{[htbp]}{width=0.9\textwidth}{fig:VECTOR}{VECTOR example.}{VECTOR example.}
+\starfig{sun137_fig9}{[htbp]}{width=0.9\textwidth}{fig:VECTOR}{VECTOR example.}{VECTOR example.}
 \newpage
 
 \subsubsection{Interactive}
@@ -942,7 +942,7 @@ database}{sun48}{}.  Here, the image display has been done using the
 used for all the line drawing (note this example is not available
 under CL).
 
-\myfig{sun137_fig8}{[htbp]}{width=\textwidth}{fig:AGI}{AGI example.}{AGI example.}
+\starfig{sun137_fig8}{[htbp]}{width=\textwidth}{fig:AGI}{AGI example.}{AGI example.}
 \newpage
 
 
